# FinamGrpcClientPython

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  update_proto.sh
finam_grpc_client/: __init__.py  base.py  client.py  client.pyi  types.py
finam_grpc_client/asyncio/: __init__.py  client.py  client.pyi
finam_grpc_client/clients/: __init__.py  _client.py  base.py  client_interfaces.py  subscribes.py
finam_grpc_client/clients/async_client/: __init__.py  _client.py  base.py
finam_grpc_client/clients/sync_client/: __init__.py  _client.py  base.py
finam_grpc_client/grpc/tradeapi/v1/: side_pb2.py  side_pb2_grpc.py  trade.proto  trade_pb2.py  trade_pb2.pyi  trade_pb2_grpc.py
finam_grpc_client/grpc/tradeapi/v1/accounts/: accounts_service.proto  accounts_service_pb2.py  accounts_service_pb2.pyi  accounts_service_pb2_grpc.py
finam_grpc_client/models/google/: date_pb2.py  date_pb2_grpc.py
finam_grpc_client/models/grpc/: candles.proto  candles_pb2.py  candles_pb2.pyi  candles_pb2_grpc.py  events.proto  events_pb2.py  events_pb2.pyi  events_pb2_grpc.py  orders.proto  orders_pb2.py  orders_pb2.pyi  orders_pb2_grpc.py  portfolios.proto  portfolios_pb2.py  portfolios_pb2.pyi  portfolios_pb2_grpc.py  securities.proto  securities_pb2.py  securities_pb2.pyi  securities_pb2_grpc.py  stops.proto  stops_pb2.py  stops_pb2.pyi  stops_pb2_grpc.py
finam_grpc_client/models/proto/: candles.proto  candles_pb2.py  candles_pb2.pyi  candles_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  events.proto  events_pb2.py  events_pb2.pyi  events_pb2_grpc.py  orders.proto  orders_pb2.py  orders_pb2.pyi  orders_pb2_grpc.py  portfolios.proto  portfolios_pb2.py  portfolios_pb2.pyi  portfolios_pb2_grpc.py  security.proto  security_pb2.py  security_pb2.pyi  security_pb2_grpc.py  stops.proto  stops_pb2.py  stops_pb2.pyi  stops_pb2_grpc.py
finam_grpc_client/proto/protoc_gen_openapiv2/options/: annotations.proto  annotations_pb2.py  annotations_pb2.pyi  annotations_pb2_grpc.py  openapiv2_pb2.py  openapiv2_pb2.pyi  openapiv2_pb2_grpc.py
finam_grpc_client/tests/: conftest.py  test_get_requests.py  test_order_create_and_cancel.py  test_stop_create_and_cancel.py  test_subscriptions.py
finam_grpc_client/tests/test_async_client/: test_account_service.py  test_assets_service.py  test_market_data_service.py  test_order_service.py
finam_grpc_client/tests/test_sync_client/: test_account_service.py  test_assets_service.py  test_market_data_service.py  test_order_service.py
tests/: conftest.py  type_checker.py
tests/test_async_client/: test_account_service.py  test_assets_service.py  test_market_data_service.py  test_order_service.py
tests/test_sync_client/: test_account_service.py  test_assets_service.py  test_market_data_service.py  test_order_service.py
(+43 files in other folders)
