[tool.poetry]
name = "finam-grpc-client"
version = "3.0.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.68.1"
googleapis-common-protos = "^1.70.0"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
types-protobuf = "^5.29.1.20241207"
grpc-stubs = "^1.53.0.5"
mypy-protobuf = "^3.6.0"
grpcio-tools = "^1.68.1"
protobuf = "^6.31.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
anyio = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = ".*_pb2.*"

[tool.isort]
profile = "black"
skip = [
    ".git", "__pycache__", ".venv", "venv", "grpc"
]
line_length = 79

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]