[tool.poetry]
name = "finam-grpc-client"
version = "3.2.2"
description = "Клиенты для взаимодействия с GRPC Api Finam"
authors = ["Sergey Korepanov <sergeykorepanov1996@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.68.1"
googleapis-common-protos = "^1.70.0"
protobuf = "^6.31.1"
poetry-core = "^2.1.3"
types-protobuf = "^6.30.2.20250516"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
grpc-stubs = "^1.53.0.5"
mypy-protobuf = "^3.6.0"
grpcio-tools = "^1.68.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
anyio = "^4.8.0"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = ".*_pb2.*"

[tool.isort]
profile = "black"
skip = [
    ".git", "__pycache__", ".venv", "venv", "grpc"
]
line_length = 79

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib", "--log-cli-level=INFO"
]